--- a/desafios/cordel/estilo/style.css
+++ b/desafios/cordel/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
+
 *{
     margin: 0px;
     padding: 0px;
@@ -7,15 +17,18 @@
 html, body{
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--font1);
 }
 header{
     background-color: black;
     color: white;
     text-align: center;
+    font-family: var(--font2);
 }
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 9vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -34,6 +47,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3vw;
 }
 
 .normal{
@@ -46,7 +61,8 @@ section{
 }
 .imagem > p{
     background-color: rgba(0, 0, 0, 0.171);
-    width: 400px;
+    display: inline-block;
+    padding: 10px;
 }
 footer{
     background-color: black;
